--- a/5.0/printer/PrinterTicket.cshtml
+++ b/5.0/printer/PrinterTicket.cshtml
@@ -8,7 +8,7 @@
   var partial = Request["X-Requested-With"] == "XMLHttpRequest" || (Request.Headers != null && Request.Headers["X-Requested-With"] == "XMLHttpRequest");
 
   var Model = new FormsModel(this);
-  var tracking_id = (string)Model.Style["tracking_id"].Value;
+  var tracking_id = Request["tid"];
 }
 
 @helper content(bool withQrCode, string tracking_id) {
