--- a/printer/P1_GetTicket.cshtml
+++ b/printer/P1_GetTicket.cshtml
@@ -39,7 +39,7 @@
   <section id="waitPopup" style="display:none;">
     <h4>SO GEHT‘S WEITER.</h4>
     <div class="Todo2">
-    <p>Ziehen Sie ihr Ticket und machen Sie es sich auf dem Sofa bequem.</p><p>Wir sind ruckzuck für Sie da!</p>
+    <p>Ziehen Sie Ihr Ticket und machen Sie es sich auf dem Sofa bequem.</p><p>Wir sind ruckzuck für Sie da!</p>
     </div>
     <img src="images/wait.gif" id="wait" alt="wait" />
     <h6>Ihr Ticket wird gedruckt.</h6>
