--- a/printer/PrinterTicket.cshtml
+++ b/printer/PrinterTicket.cshtml
@@ -45,7 +45,7 @@
     <a href="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></a>
     }  
     <h6>Kleiner Tipp:</h6>
-    <p>QR-Code scannen, um Ihre Position<br>auch online zu verfolgen.</p>
+    <p>Noch etwas zu erledigen? Einfach Ticket scannen und sehen, wann Sie dran sind.</p>
   </section>
   <footer>
     @DateTime.Now.ToString("dd.MM.yyyy")&emsp;
