KORREKTUR: Bitte entnehmen Sie "Ihre" Wartenummer
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/printer/Printer.cshtml
+++ b/5.0/printer/Printer.cshtml
@@ -36,7 +36,7 @@
       <div>
         <img src="wait.gif" id="wait" alt="wait" />
       </div>
-      <h6>Bitte entnehmen Sie ihre Wartenummer</h6>
+      <h6>Bitte entnehmen Sie Ihre Wartenummer</h6>
       <img src="PfeilUnten.png" />
     </section>
 
@@ -46,7 +46,7 @@
       <div>
         <img src="wait.gif" id="wait" alt="wait" />
       </div>
-      <h6>Bitte entnehmen Sie ihre Wartenummer</h6>
+      <h6>Bitte entnehmen Sie Ihre Wartenummer</h6>
       <img src="PfeilUnten.png" />
     </section>
 
