h1> positioned closer to the date and time
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/styles/ticket.scss
+++ b/5.0/styles/ticket.scss
@@ -33,6 +33,7 @@ section.ticket {
         font-size: 65px;
         color: #000;
         line-height: 1px;
+        margin: 33px;
     }
     img {
         width: 100%;
