PrinterTicket: fix qrcode url generation

--- a/5.0/printer/PrinterTicket.cshtml
+++ b/5.0/printer/PrinterTicket.cshtml
@@ -37,8 +37,10 @@ var ticket = Vocatis.CreateTicket(queueid, catids);
   </footer>
 </section>
 <script type="text/javascript">
-  var appurl = new URL($(".qrcode>a").attr("href"), window.location.href).href;
-  $("section.qrcode>a").qrcode({text: appurl})
+  // make absolute
+  var a = document.createElement("a");
+  a.href = $(".qrcode>a").attr("href");
+  $("section.qrcode>a").qrcode({text: a.href})
 </script>
 }
 
