QR code CI color
To Do:
-test- QR code
-site print-feedback

Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/printer/P2_GetTicket.cshtml
+++ b/printer/P2_GetTicket.cshtml
@@ -77,7 +77,11 @@
           a.href = url;
           url = a.href;
       }
-      $(this).qrcode({text: url});
+      $(this).qrcode({
+        text: url,
+        fill: 'white',
+        background: '#002d67'
+      });
     });
   }
 
